--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/tsc-wrapped": "^4.2.6",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.6.0",
+    "angularfire2": "^4.0.0-rc.2",
+    "firebase": "^4.3.0",
+    "ionic-angular": "3.5.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
+    "@ionic/app-scripts": "2.0.1",
+    "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project"
